spacing correction

--- a/css/lab6.css
+++ b/css/lab6.css
@@ -7,14 +7,13 @@ body {
   margin: 0 auto;
   box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
   border-radius: 12px 12px 0px 0px;
-
- }
+}
 
 #header {
   position: relative;
   margin-top: 40px;
   border-radius: 12px 12px 0px 0px;
- }
+}
 
 #header h1 { 
   position: absolute;
@@ -51,7 +50,7 @@ body {
   float: left;
 }
 
-#main-content{ 
+#main-content { 
   min-height: 300px;
   width: 715px;
   margin-right: 30px;
@@ -73,7 +72,6 @@ h2 strong {
   margin: 10px 0 10px 20px;
 }
 
-
 #side-content { 
   min-height: 150px;
   width: 200px;
@@ -85,7 +83,6 @@ h2 strong {
   width: 100%;
   background-color: #333;
 }
-
 
 #main-nav ul { 
   list-style-type: none;
@@ -116,10 +113,10 @@ h2 strong {
 
 #center {
   width: 960px;
-  text-align; center;
+  text-align: center;
 }
 
-#strong {
+strong {
   font-weight: 900;
   font-size: 48px;
 }
